<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usc.mbm.ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#94b1ff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/id_textView_results" />

        <TextView
            android:text="@string/info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_results"
            android:id="@+id/id_textView_info1" />

        <TextView
            android:text="@string/result_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results"
            android:id="@+id/id_textView_results1" />

        <TextView
            android:text="@string/info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_info1"
            android:id="@+id/id_textView_info2" />

        <TextView
            android:text="@string/result_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results1"
            android:id="@+id/id_textView_results2" />


        <TextView
            android:text="@string/info_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_info2"
            android:id="@+id/id_textView_info3" />


        <TextView
            android:text="@string/result_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results2"
            android:id="@+id/id_textView_results3" />


        <TextView
            android:text="@string/info_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_info3"
            android:id="@+id/id_textView_info4" />


        <TextView
            android:text="@string/result_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results3"
            android:id="@+id/id_textView_results4" />

        <TextView
            android:text="@string/info_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_info4"
            android:id="@+id/id_textView_info5" />


        <TextView
            android:text="@string/result_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results4"
            android:id="@+id/id_textView_results5" />

        <TextView
            android:text="@string/info_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/id_textView_info5"
            android:id="@+id/id_textView_info6" />


        <TextView
            android:text="Borough not found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/id_textView_info5"
            android:layout_toRightOf="@+id/id_textView_info5"
            android:layout_below="@+id/id_textView_results5"
            android:id="@+id/id_textView_results6" />

        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/id_textView_info6"
            android:id="@+id/id_button_back" />





    </RelativeLayout>
</RelativeLayout>
